--- a/posts/one-line-deployment-of-your-site-to-gh-pages.ipynb
+++ b/posts/one-line-deployment-of-your-site-to-gh-pages.ipynb
@@ -44,6 +44,102 @@
       "\n",
       "Dami\u00e1n."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!pwd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/home/damian/Desarrollos/To_PR/SITIOS/Github_Pages/damian_blog/posts\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!cd .."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!pwd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/home/damian/Desarrollos/To_PR/SITIOS/Github_Pages/damian_blog/posts\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cd .."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/home/damian/Desarrollos/To_PR/SITIOS/Github_Pages/damian_blog\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ls"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\u001b[0m\u001b[01;34mcache\u001b[0m/   conf.pyc  \u001b[01;34mgalleries\u001b[0m/  \u001b[01;34mposts\u001b[0m/     \u001b[01;34mstories\u001b[0m/\r\n",
+        "conf.py  \u001b[01;34mfiles\u001b[0m/    \u001b[01;34moutput\u001b[0m/     README.md  \u001b[01;34mthemes\u001b[0m/\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
