More tiny fixes to the deploy section

--- a/posts/binder-+-nikola-+-jupyter-+-github-blogging-resourceless.ipynb
+++ b/posts/binder-+-nikola-+-jupyter-+-github-blogging-resourceless.ipynb
@@ -1288,9 +1288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 7927ad63] Add new stuff to the blog post (mostly deploy section)\r\n",
+      " 1 file changed, 291 insertions(+), 25 deletions(-)\r\n"
+     ]
+    }
+   ],
    "source": [
     "!git commit -m \"Add new stuff to the blog post (mostly deploy section)\""
    ]
@@ -1301,16 +1310,43 @@
    "source": [
     "In the terminal: `git push origin master` to persist the latest content... again. And use a subtree approach to split the `output` directory and put it as a new `gh-pages` branch.\n",
     "\n",
-    "**Note**: First delete the existing `gh-pages` branch to avoid conflicts."
+    "**Note**: First delete the existing `gh-pages` branch to avoid conflicts and `cd ..` because you need to subtree from the top directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: deleting branch 'gh-pages' that has been merged to\r\n",
+      "         'refs/remotes/origin/gh-pages', but not yet merged to HEAD.\r\n",
+      "Deleted branch gh-pages (was 4fb3a46f).\r\n"
+     ]
+    }
+   ],
    "source": [
     "!git branch -d gh-pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
    ]
   },
   {
