Add last notes and fix typos

--- a/posts/binder-+-nikola-+-jupyter-+-github-blogging-resourceless.ipynb
+++ b/posts/binder-+-nikola-+-jupyter-+-github-blogging-resourceless.ipynb
@@ -19,6 +19,8 @@
     "Don't you believe me? Just read this post and I will show you how you can make this possible... and fun!\n",
     "<!-- TEASER_END -->\n",
     "\n",
+    "**NOTE**: This post is long but I promise will be interesting! Also, there are multiple cells generating a *lot* of output, remember that you can hide the output clicking on *\"Click me to hide the output\"* button at the bottom/right conner of each cell.\n",
+    "\n",
     "## Ingredients\n",
     "\n",
     "First, as with any other recipe, we need some ingredients.\n",
@@ -1351,9 +1353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created branch 'gh-pages'\n",
+      "7092c69ccde3f7cd2a5d31c2a86b74739d665ac0\n"
+     ]
+    }
+   ],
    "source": [
     "!git subtree split --prefix output -b gh-pages"
    ]
@@ -1362,15 +1373,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, in the terminal: `git push -f origin gh-pages:gh-pages` to deploy your site\n",
+    "Finally, in the terminal: `git push -f origin gh-pages:gh-pages` to deploy your site and remove the local `gh-pages` with `git branch -D gh-pages`.\n",
     "\n",
     "And you are done!!!\n",
+    "\n",
+    "**Note**: As you probably realized, you can run all the commands I described from the terminal and use the notebook just to write the blog posts. That would be, probably, the most common pattern. But this post in nicer and more explanatory if I run most of the commands here ;-)\n",
+    "\n",
+    "### Conclusion\n",
     "\n",
     "You have your new post *live*, in a *resourceless* sort of workflow, thanks to the **Jupyter** ecosystem, **Nikola** and **Github**.\n",
     "\n",
     "OK, long enough post. Sorry about that, but I need to give you the complete workflow if you want/need to use it.\n",
     "\n",
-    "Happy coding! And blogging!"
+    "Happy coding!\n",
+    "\n",
+    "And blogging!"
    ]
   }
  ],
