--- a/Start.ipynb
+++ b/Start.ipynb
@@ -9,40 +9,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title = \"Some thoughts about the 2017 ACM Software System Award for Project Jupyter\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title = \"RISE 5.2.0 is out!\""
+    "tags_list = ['Jupyter', 'IPython', 'jupyterlab', 'Binder', 'opensource', 'python']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "tags_list = ['conda', 'Jupyter', 'Linux', 'osx', 'pip', 'python', 'reveal', 'RISE', 'slideshow', 'win']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33;01m[2018-02-05T02:45:51Z] WARNING: Nikola: The RSS_LINKS_APPEND_QUERY option is deprecated, use FEED_LINKS_APPEND_QUERY instead.\u001b[39;49;00m\n",
-      "\u001b[33;01m[2018-02-05T02:45:51Z] WARNING: Nikola: The RSS_READ_MORE_LINK option is deprecated, use FEED_READ_MORE_LINK instead.\u001b[39;49;00m\n",
+      "\u001b[33;01m[2018-05-02T22:18:39Z] WARNING: Nikola: The RSS_LINKS_APPEND_QUERY option is deprecated, use FEED_LINKS_APPEND_QUERY instead.\u001b[39;49;00m\n",
+      "\u001b[33;01m[2018-05-02T22:18:39Z] WARNING: Nikola: The RSS_READ_MORE_LINK option is deprecated, use FEED_READ_MORE_LINK instead.\u001b[39;49;00m\n",
       "Creating New Post\n",
       "-----------------\n",
       "\n",
-      "Title: RISE 5.2.0 is out!\n",
+      "Title: Some thoughts about the 2017 ACM Software System Award for Project Jupyter\n",
       "Scanning posts......done!\n",
-      "\u001b[33;01m[2018-02-05T02:45:53Z] NOTICE: compile_ipynb: No kernel specified, assuming \"python3\".\u001b[39;49;00m\n",
-      "\u001b[37m[2018-02-05T02:45:53Z] INFO: new_post: Your post's text is at: posts/rise-520-is-out.ipynb\u001b[39;49;00m\n"
+      "\u001b[33;01m[2018-05-02T22:18:40Z] NOTICE: compile_ipynb: No kernel specified, assuming \"python3\".\u001b[39;49;00m\n",
+      "\u001b[37m[2018-05-02T22:18:41Z] INFO: new_post: Your post's text is at: posts/some-thoughts-about-the-2017-acm-software-system-award-for-project-jupyter.ipynb\u001b[39;49;00m\n"
      ]
     }
    ],
@@ -51,13 +51,6 @@
     "\n",
     "!nikola new_post -f ipynb --title=\"{title}\" --tags=\"{tags}\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
