--- a/es/posts/some-thoughts-about-the-2017-acm-software-system-award-for-project-jupyter.ipynb
+++ b/es/posts/some-thoughts-about-the-2017-acm-software-system-award-for-project-jupyter.ipynb
@@ -33,7 +33,20 @@
     "\n",
     "**PS**\n",
     "\n",
-    "On a personal note, I would also like to thank **Anaconda, Inc**. I have been working here for a long time now and it was/is a great experience. I am grateful for the generous support they provided in building the next **Jupyter** experience, **JupyterLab**. And I am also grateful for the continuous support in my involvement with the **Jupyter** community. I really appreciate that!"
+    "On a personal note, I would also like to thank **Anaconda, Inc**. I have been working here for a long time now and it was/is a great experience. I am grateful for the generous support they provided in building the next **Jupyter** experience, **JupyterLab**. And I am also grateful for the continuous support in my involvement with the **Jupyter** community. I really appreciate that!\n",
+    "\n",
+    "### Update (Jun)\n",
+    "\n",
+    "Last weekend a big part of the **Jupyter** team received the announced prize in the **ACM** 2018 banquet at San Francisco, CA.\n",
+    "Some pics or it did not happen!\n",
+    "\n",
+    "![](http://www.damian.oquanta.info/galleries/acm/1.jpg)\n",
+    "\n",
+    "A better quality one ;-)\n",
+    "\n",
+    "![](http://www.damian.oquanta.info/galleries/acm/2.jpg)\n",
+    "\n",
+    "Thanks again to all who contributes to the project!"
    ]
   }
  ],
@@ -53,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   },
   "nikola": {
    "category": "",
