--- a/posts/rise-571-is-out.ipynb
+++ b/posts/rise-571-is-out.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're pleased to announce the release of **RISE** 5.6.1!\n",
+    "We're pleased to announce the release of **RISE** 5.7.1!\n",
     "\n",
     "### *What is RISE?*\n",
     "\n",
@@ -23,11 +23,21 @@
     "\n",
     "### *What are the latest news?*\n",
     "\n",
-    "This released was mainly focused on:\n",
+    "**Wait!** Latest release was 5.6.1, where is **RISE** 5.7.0?\n",
     "\n",
-    "* Remove accent in setup.py that was occasionally breaking installation (yes, my name making troubles again ;-)\n",
-    "* Properly load companion css when running with Jupytext enabled (we need to be compatible with new and exciting project under the Jupyter ecosystem)\n",
-    "* Experimental feature to allow users to change the keyboard shortcuts attached to internal reveal functions (more info at https://rise.readthedocs.io/en/stable/customize.html#native-keyboard-shortcuts-for-reveal-js-and-reveal-js-plug-ins, thanks again Thies Hecker for contributing this feature!)\n",
+    "We shipped 5.7.0 a few days ago and we found some issues that deserved immediate patches and a new shiny release.\n",
+    "This is why you have **RISE** 5.7.1 available now.\n",
+    "\n",
+    "So, these releases were mainly focused on:\n",
+    "\n",
+    "* Adding color support to the chalkboard \n",
+    "* Upload to reveal.js 3.9.2\n",
+    "* Fix not working notes keyboard shortcut (5.7.0 bug)\n",
+    "* Fix buttons disappearance (5.7.0 bug)\n",
+    "* New setting rise.show_buttons_on_startup (#561)\n",
+    "* Enforce notebook >= 6.0\n",
+    "* Add a new support page in the documentation\n",
+    "* New sources layout, in anticipation for a future jlab extension: sources are now split between rise-reveal that contains an npm package that wraps the official reveal.js for our needs, and classic that contains the actual code for the RISE classic extension.\n",
     "\n",
     "You can see a detailed changelog [here](https://rise.readthedocs.io/en/stable/changelog.html#changes).\n",
     "\n",
@@ -35,7 +45,7 @@
     "\n",
     "### *What's next?*\n",
     "\n",
-    "Stay tuned, we will have very exciting news soon!"
+    "You should keep staying tuned, we will have very exciting news sooner than later!"
    ]
   }
  ],
@@ -59,12 +69,12 @@
   },
   "nikola": {
    "category": "",
-   "date": "2020-02-21 18:30:45 UTC-03:00",
+   "date": "2020-10-30 11:52:24 UTC-03:00",
    "description": "",
    "link": "",
-   "slug": "rise-561-is-out",
+   "slug": "rise-571-is-out",
    "tags": "conda, Jupyter, linux, osx, pip, python, reveal, RISE, slideshow, win",
-   "title": "RISE 5.6.1 is out!",
+   "title": "RISE 5.7.1 is out!",
    "type": "text"
   }
  },
